--- a/random.html
+++ b/random.html
@@ -1,3 +1,3 @@
 <comic-directive comic="comic" num="randomNum()"></comic-directive>
 
-<!-- generate random # in controller? -->
+<!-- two random #s instead of one?? -->
