--- a/specific.html
+++ b/specific.html
@@ -1,11 +1,7 @@
-
-<!-- <button ng-click="clear()">Clear</button> -->
+<header-directive></header-directive>
 
 <form class="navbar-form text-center" ng-submit="doThis(specific)">
 	<input class="form-control" placeholder="enter a number" ng-model="specific">
 </form>
-<comic-directive comic="comic" num="specific"></comic-directive>
 
-
-
-<!-- what happens when invalid num -->
+<comic-directive></comic-directive>
