--- a/index.html
+++ b/index.html
@@ -3,35 +3,26 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>XKCD</title>
+	<title>xkcd</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles.css">
 </head>
-<body ng-app="xkcdapp" ng-controller="mainCtrl">
+<body ng-app="xkcdapp" >
 
-	<nav>
-		<div>
-			<a ui-sref="home" >Home</a>
-		</div>
-		<div>
-			<a ui-sref="specific">Specific</a>
-		</div>
-		<div>
-			<a ui-sref="random" ng-click="randomNum()">Random</a>
-		</div>
-	</nav>
+	
 
 	<ui-view autoscroll='false'></ui-view>
 	
 
 
-
+	<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
 	<script src="app.js"></script>
-	<script src="controller.js"></script>
 	<script src="directive.js"></script>
 	<script src="service.js"></script>
+	<script src="headerDirective.js"></script>
 	
 </body>
 </html>
