--- a/random.html
+++ b/random.html
@@ -1,3 +1,3 @@
-<comic-directive comic="comic" num="randomNum()"></comic-directive>
+<header-directive></header-directive>
 
-<!-- two random #s instead of one?? -->
+<comic-directive></comic-directive>
