--- a/directiveTemplate.html
+++ b/directiveTemplate.html
@@ -2,8 +2,10 @@
 
 	<div><h1>{{comic.title}}</h1></div>
 	
-	<div>{{comic.date}}</div>
+	<div><h3>{{comic.date}}</h3></div>
 
 	<img ng-src="{{comic.img}}" title="{{comic.alt}}">
+
+	<div id="alt-text">{{comic.alt}}</div>
 
 </main>
